# nio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml
.github/workflows/: test.yml
docs/: anti-slop-reference.md
examples/team-gtm-coding/.nio/: team.toml
nio/: __init__.py
nio/claude_code/: hooks.json  session_bridge.py  skill.md
nio/cli/: boot.py  cmd_antislop.py  cmd_cc.py  cmd_dash.py  cmd_gateway.py  cmd_install.py  cmd_metrics.py  cmd_setup.py  cmd_soul.py  cmd_team.py  cmd_voice.py  main.py
nio/codegen/: render_markdown.py  render_python.py  render_typescript.py
nio/core/: antislop.py  db.py  memory.py  metrics.py  mode.py  platform_probe.py  soul.py  team.py  tmux.py  tunnel.py  versioning.py  voice.py
nio/dash/: server.py  ws.py
nio/dash/templates/: base.html  chat.html  gateway.html  index.html  learn.html  memory.html  metrics.html  registry.html  session_detail.html  sessions.html  soul.html  soul_diff.html  team.html
nio/gateway/: __init__.py  discord_bot.py  ollama.py  run.py  whatsapp.py
nio/hermes_bridge/: HOOK.yaml  handler.py  middleware.py
registry/: anti-slop.json
registry/souls/: nio-core.md  nio-reviewer.md
registry/voice-profiles/: enterprise-neutral.md  shawn-builder.md
scripts/: dev_daemon.sh  migrate_hermes.sh
tests/: conftest.py  test_antislop_registry.py  test_cc_bridge.py  test_cli_commands.py  test_cli_commands_2.py  test_codegen.py  test_dashboard.py  test_hermes_bridge.py  test_memory.py  test_mode.py  test_platform_probe.py  test_soul_inheritance.py  test_team.py  test_tunnel.py  test_versioning.py
(+2 files in other folders)
